2007-12-20  Johan Dahlin  <johan@gnome.org>

	* flumotion/common/registry.py (RegistryDirectory._rebuildNeeded): 
	Remove bogus assert, so FLU_PROJECT_PATH can be set to a directory
	without registry files. Makes it possible to have a unified environment
	for running both manager and fgc.

2007-12-19  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/gtk/componentview.py: Make sure unjelliers
	for the componentui are registered.

2007-12-19  Johan Dahlin  <johan@gnome.org>

	* data/glade/connections.glade:
	* flumotion/admin/gtk/connections.py (Connections): 
	Reuse using ObjectList. Add a new column and sorting

	* flumotion/admin/connections.py (RecentConnection): New class, 
	use this instead of a dictionary to represent a recently
	used connection

	* flumotion/admin/gtk/greeter.py:
	* flumotion/admin/text/greeter.py:
	Update callsites

	* flumotion/admin/gtk/client.py:
	Update the timestamp after successfully connecting to a manager

	Fixes #810

2007-12-19  Johan Dahlin  <johan@gnome.org>

	* misc/pycheckerrc (blacklist): Add kiwi and kiwi.ui

2007-12-19  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/command/commands.py:
	  Allow lists in flumotion-command invoke arguments.

2007-12-19  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py
	(Vishnu._componentStopNoAvatar.stopLost)
	(Vishnu._componentStopWithAvatar): 
	* flumotion/common/planet.py
	(ManagerComponentState.clearJobState): Fix #793.

	* flumotion/component/combiners/switch/switch.py
	(Switch.do_check): Check for a sufficiently new switch.

	* flumotion/worker/checks/check.py (checkPlugin): Add crack to
	allow user-defined checks to be run on particular plugin features.

	* flumotion/component/combiners/switch/patternswitch.py
	(PatternEventSwitcher._markers_event_probe): Minor fixes; this one
	is still bitrotten. Not an AP tho.

2007-12-18  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/combiners/switch/basicwatchdog.py
	(SingleBasicWatchdog.feedSetInactive)